styles/components/_sidemenu.scss
.sidemenu_ {
  &_wrapper {
    @apply fixed top-0 right-0 z-40 flex max-h-screen w-full flex-col  overflow-y-scroll bg-[#eeeeeeb3] bg-opacity-80 backdrop-blur-sm md:h-screen md:flex-row;
  }
  &_backdrop {
    @apply hidden flex-auto lg:block;
  }
  &_container {
    @apply  h-full w-full flex-col justify-between bg-white xl:flex xl:w-2/3;
  }
  &_header {
    @apply flex justify-end p-8 pb-3 2xl:p-16 2xl:pb-0;

    &_closebutton {
      @apply cursor-pointer;
      & svg {
        @apply scale-75 2xl:scale-100;
      }
      &:hover {
        @apply text-gray-600;
      }
    }
  }

  &_content {
    @apply flex flex-col px-10 md:flex-row;

    &_items {
      @apply text-5xl font-bold lg:pl-10 lg:text-4xl xl:pl-14 xl:text-5xl 2xl:pl-24 2xl:text-6xl 3xl:text-7xl;
    }
    &_item {
      @apply pt-3 lg:pt-4 2xl:py-3;
    }
    &_resources {
      @apply flex-col items-center  pr-20 pt-10 text-2xl md:flex md:flex-auto md:justify-center md:pt-0 lg:pl-10;
      &_wrapper {
        @apply grid grid-cols-2 flex-col items-center md:flex;
      }

      & h4 {
        @apply text-3xl font-bold uppercase text-[#5C5C5C] 2xl:text-5xl;
      }
      & a {
        @apply mt-3 text-2xl 2xl:mt-5 2xl:text-4xl;
      }
    }
  }

  &_footer {
    @apply py-10 lg:flex  lg:flex-row lg:items-center lg:justify-between lg:py-5 lg:px-10 lg:pl-5 2xl:py-10 2xl:pl-24;

    & .social-links {
      @apply pl-10;

      & h4 {
        @apply block text-3xl font-bold uppercase text-[#5C5C5C] lg:mt-10 xl:hidden;
      }

      &_wrapper {
        @apply grid grid-cols-2 pr-20 text-xl lg:pr-0 xl:flex 2xl:pr-20 2xl:text-2xl;
      }

      &_item {
        @apply mt-3 text-2xl lg:mr-8 lg:text-xl 2xl:mr-10 2xl:mt-5 3xl:text-2xl;
      }
    }
    & .multilingual {
      @apply float-right mr-10 mt-3 text-2xl lg:float-none lg:mr-5 lg:mt-0;
    }
  }
}

